Ensure content doesn't overflow the debug information

--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -19,5 +19,5 @@ app-header {
 }
 
 main {
-  height: calc(100% - 64px);
+  min-height: calc(100% - 64px);
 }
